# apps/api/src/modules/forum/presentation/forum.dto.ts
@@ -1,7 +1,11 @@
 import {
   approveMemberSchema,
   assignOwnerSchema,
+  createThreadSchema,
   createZoneSchema,
+  feedQuerySchema,
+  pinThreadSchema,
+  reactionSchema,
   zoneListQuerySchema,
   zoneMembersQuerySchema,
 } from "@mentor/validation";
@@ -12,3 +16,7 @@ export class AssignOwnerDto extends createZodDto(assignOwnerSchema) {}
 export class ApproveMemberDto extends createZodDto(approveMemberSchema) {}
 export class ZoneListQueryDto extends createZodDto(zoneListQuerySchema) {}
 export class ZoneMembersQueryDto extends createZodDto(zoneMembersQuerySchema) {}
+export class CreateThreadDto extends createZodDto(createThreadSchema) {}
+export class FeedQueryDto extends createZodDto(feedQuerySchema) {}
+export class ReactionDto extends createZodDto(reactionSchema) {}
+export class PinThreadDto extends createZodDto(pinThreadSchema) {}
